--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <!--   <audio autoplay src="/audio/360ytmp3.com_320kbps-coldplay-sparks-lyrics.mp3"></audio> -->
+  <audio autoplay src="/audio/360ytmp3.com_320kbps-coldplay-sparks-lyrics.mp3"></audio>
   <div class="flex">
     <div id="profile-container">
 
